  * dh_makeshlibs: Avoid forking a shell per line in the
    generated shlibs file.
  * dh_makeshlibs: Find all libraries with an unversioned SONAME
    field (and not just the unversioned ones containing ".so").
  * dh_makeshlibs: In compat 12, stop passing ELF binaries without
    a SONAME to dpkg-gensymbols.  Thanks to Steve Langasek for the
    report.  (Closes: #653640)

 -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000

debhelper (11) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_installdeb: Do basic validation of rm_conffile and mv_conffile
    parameters in "maintscript" parameters in compat 10 and newer.
    In compat 12, this is an error.  Thanks to Andreas Beckmann for
    the suggestions.  (Closes: #882626)
  * dh_strip: Fix bug where the Build-Id field would not be properly
    filled when using --dbg-package.  Thanks to Paul Wise for finding
    and reporting the bug.  (Closes: #884152)
  * d/control: Bump Standards-Version to 4.1.2 - no changes required.
  * dh_installsystemd: Remove neutering of dh_installsystemd in compat
    levels prior to 11 now that compat 11 is stable.

  [ Chris Leick ]
  * debhelper.pod: Improve the wording of two parapraphs.

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)
    (Closes: #883635)
  * Update German translation (Chris Leick)  (Closes: #884205)

 -- Niels Thykier <niels@thykier.net>  Sat, 16 Dec 2017 15:41:17 +0000

debhelper (10.10.9) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * qmake.pm: Add missing import of generated_file.
  * meson.pm: Find typo of meson in the name of the cross config
    file.
  * qmake.pm: Push compiler information as ‘early’ flags to qmake, to
    make sure qmake calls the right compiler to get library paths.
  * qmake.pm: Add all possible settings to generated qmake-cross.conf.
    Now output of ‘qmake -query’ with and without using this file is
    identical. This makes cross-building Qt’s own modules possible.
