@@ -774,6 +774,11 @@ The B<dh_missing> tool will now default to B<--list-missing>.
 The B<dh_makeshlibs> tool will now only pass libraries to L<dpkg-gensymbols(1)>
 if the ELF binary has a SONAME (containing ".so").
 
+=item -
+
+The B<dh_compress> tool no longer compresses examples (i.e. anything installed
+in F<</usr/share/doc/I<package>/examples>>.)
+
 =back
 
 =back
