@@ -27,6 +27,9 @@ debhelper (11.1) UNRELEASED; urgency=medium
   * dh_makeshlibs: In compat 12, stop passing ELF binaries without
     a SONAME to dpkg-gensymbols.  Thanks to Steve Langasek for the
     report.  (Closes: #653640)
+  * dh_compress: In compat 12, stop compressing any thing in
+    /usr/share/doc/$pkg/examples.  Thanks to Piotr Ożarowski for
+    the suggestion.  (Closes: #593382)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 17 Dec 2017 07:59:18 +0000
 
